# yolokernelgen

./: .gitignore  LICENSE  README.md  RESULTS.md  analyze_generated_kernels.py  enhanced_prompts.py  pyproject.toml  test_cached_kernels.py  test_conv2d.py  test_feedback_system.py  test_fusion.py  test_llm_only.py
docs/: ARCHITECTURE.md  analyze_generated_kernels.py  enhanced_prompts.py
examples/: example_00_legacy.py  example_01_simple_operations.py  example_02_tensor_operations.py  example_03_convolutions.py  example_04_fusion_optimization.py  example_05_iterative_feedback.py  example_06_progressive_conv3d.py
tests/: test_add_one.py  test_cached_kernels.py  test_conv2d.py  test_enhanced.py  test_full_validation.py  test_fusion.py  test_llm_only.py
yolokernelgen/: __init__.py  cli.py  config.py  config_old.py  exceptions.py  generation.py  knowledge_base.py  llm.py  logging_config.py  memory_utils.py  naming.py  prompts.py  runtime.py  storage.py  storage_old.py  types.py  validation.py  validator.py  webgpu_executor.py
