[project]
name = "yolokernelgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dawn-python>=0.3.0",
    "numpy>=2.3.3",
    "torch>=2.8.0",
]

[tool.setuptools.packages.find]
include = ["yolokernelgen*"]
exclude = ["extras*", "tests*", "docs*", "examples*"]

[tool.pyright]
exclude = ["extras/**", "extras"]
